Updated project setup.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,7 +2,7 @@
 # This file is part of the pl.wrzasq.commons.
 #
 # @license http://mit-license.org/ The MIT license
-# @copyright 2023 © by Rafał Wrzeszcz - Wrzasq.pl.
+# @copyright 2023 - 2024 © by Rafał Wrzeszcz - Wrzasq.pl.
 ##
 
 on:
@@ -23,7 +23,7 @@ jobs:
     build:
         runs-on: "ubuntu-22.04"
         container:
-            image: "rafalwrzeszczwrzasqpl/build-rust:nightly-v0.1.0"
+            image: "rafalwrzeszczwrzasqpl/build-rust:nightly-v0.2.0"
             # needed for tarpaulin
             options: "--security-opt seccomp=unconfined"
         services:
@@ -48,6 +48,8 @@ jobs:
             -
                 run: "make doc"
             -
+                run: "make lcov"
+            -
                 uses: "codecov/codecov-action@v3.1.4"
                 with:
                     token: "${{ vars.CODECOV_TOKEN }}"
@@ -59,7 +61,7 @@ jobs:
         if: "(github.event_name == 'push') && (github.event.ref == 'refs/heads/master')"
         runs-on: "ubuntu-22.04"
         container:
-            image: "rafalwrzeszczwrzasqpl/build-rust:nightly-v0.1.0"
+            image: "rafalwrzeszczwrzasqpl/build-rust:nightly-v0.2.0"
         needs: "build"
         permissions:
             contents: "write"
