[skip ci] `.editorconfig` managed by Terraform

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,7 @@
 ##
-# This file is part of the pl.wrzasq.commons.
+# File managed by Terraform.
 #
-# @license http://mit-license.org/ The MIT license
-# @copyright 2023 © by Rafał Wrzeszcz - Wrzasq.pl.
+# @copyright 2024 © by Rafał Wrzeszcz - Wrzasq.pl.
 ##
 
 [*]
