Added `aws-smithy` to AWS SDK dependencies group.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,6 +17,7 @@ updates:
                 patterns:
                     - "aws-config"
                     - "aws-sdk-*"
+                    - "aws-smithy-*"
     -
         package-ecosystem: "github-actions"
         directory: "/"
