Enabled build on all branches as we now check for double execution in pull requests.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,8 +8,7 @@
 on:
     push:
         tags-ignore: "**"
-        branches:
-            - "master"
+        branches: "**"
     pull_request:
         branches: "**"
     schedule:
