--- a/wrzasqpl-commons-aws-macros/Cargo.toml
+++ b/wrzasqpl-commons-aws-macros/Cargo.toml
@@ -15,14 +15,6 @@ description = "Proc-macro derive utilities for wrzasqpl-commons-aws"
 proc-macro = true
 
 [dependencies]
-proc-macro2 = { version = "1", default-features = false }
+proc-macro2 = "1"
 quote = "1"
-syn = { version = "2", features = ["extra-traits", "full"] }
-
-[dev-dependencies]
-wrzasqpl-commons-aws = { path = "../wrzasqpl-commons-aws" }
-serde = { version = "1", features = ["derive"] }
-aws-sdk-dynamodb = "1.92.0"
-tokio = { version = "1.47.1", features = ["macros"] }
-aws-smithy-runtime = { version = "1.9.1", features = ["client", "connector-hyper-0-14-x"] }
-hyper = { version = "0.14.30", features = ["client", "tcp"] }
+syn = { version = "2", features = ["full", "extra-traits"] }
