--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,12 @@
 [workspace]
 members = [
     "wrzasqpl-commons-aws",
+    "wrzasqpl-commons-aws-macros",
 ]
 resolver = "3"
 
 [workspace.package]
-version = "4.0.4"
+version = "4.1.0"
 edition = "2024"
 license = "MIT"
 repository = "https://github.com/rafalwrzeszcz-wrzasqpl/pl.wrzasq.commons"
