--- a/wrzasqpl-commons-aws/Cargo.toml
+++ b/wrzasqpl-commons-aws/Cargo.toml
@@ -32,8 +32,13 @@ tracing = "0.1.43"
 tracing-core = "0.1.35"
 tracing-subscriber = "0.3.22"
 xray-tracing = "0.0.1"
+wrzasqpl-commons-aws-macros = { path = "../wrzasqpl-commons-aws-macros", optional = true }
 
 [dev-dependencies]
 aws-smithy-types = "1.3.4"
 test-context = "0.5.4"
 tokio = { version = "1.48.0", features = ["macros"] }
+
+[features]
+default = []
+derive = ["dep:wrzasqpl-commons-aws-macros"]
