--- a/wrzasqpl-commons-aws/Cargo.toml
+++ b/wrzasqpl-commons-aws/Cargo.toml
@@ -34,8 +34,13 @@ tracing = "0.1.41"
 tracing-core = "0.1.34"
 tracing-subscriber = "0.3.20"
 xray-tracing = "0.0.1"
+wrzasqpl-commons-aws-macros = { path = "../wrzasqpl-commons-aws-macros", optional = true }
 
 [dev-dependencies]
 aws-smithy-types = "1.3.2"
 test-context = "0.4.1"
 tokio = { version = "1.47.1", features = ["macros"] }
+
+[features]
+default = []
+derive = ["dep:wrzasqpl-commons-aws-macros"]
