--- a/wrzasqpl-commons-aws-macros/Cargo.toml
+++ b/wrzasqpl-commons-aws-macros/Cargo.toml
@@ -21,7 +21,7 @@ keywords = ["aws", "lambda", "dynamodb"]
 proc-macro = true
 
 [dependencies]
-proc-macro2 = "1.0.103"
+proc-macro2 = { version = "1.0.103", default-features = false }
 quote = "1.0.42"
 syn = { version = "2.0.111", features = ["full", "extra-traits"] }
 
