--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 # This file is part of the pl.wrzasq.commons.
 #
 # @license http://mit-license.org/ The MIT license
-# @copyright 2023 © by Rafał Wrzeszcz - Wrzasq.pl.
+# @copyright 2023, 2025 © by Rafał Wrzeszcz - Wrzasq.pl.
 ##
 
 [workspace]
@@ -10,4 +10,15 @@ members = [
     "wrzasqpl-commons-aws",
     "wrzasqpl-commons-aws-macros",
 ]
-resolver = "2"
+resolver = "3"
+
+[workspace.package]
+version = "4.0.0"
+edition = "2024"
+license = "MIT"
+repository = "https://github.com/rafalwrzeszcz-wrzasqpl/wrzasqpl-commons"
+homepage = "https://wrzasq.pl/"
+readme = "README.md"
+authors = [
+    "Rafał Wrzeszcz <rafal.wrzeszcz@wrzasq.pl>"
+]
