--- a/wrzasqpl-commons-aws/Cargo.toml
+++ b/wrzasqpl-commons-aws/Cargo.toml
@@ -7,21 +7,19 @@
 
 [package]
 name = "wrzasqpl-commons-aws"
-version = "3.5.31"
-edition = "2024"
-license = "MIT"
+version.workspace = true
+edition.workspace = true
+license.workspace = true
+repository.workspace = true
+homepage.workspace = true
+readme.workspace = true
+authors.workspace = true
 description = "AWS-related utility functions for commor routines."
-repository = "https://github.com/rafalwrzeszcz-wrzasqpl/wrzasqpl-commons"
-homepage = "https://wrzasq.pl/"
-readme = "../README.md"
-authors = [
-    "Rafał Wrzeszcz <rafal.wrzeszcz@wrzasq.pl>"
-]
 keywords = ["aws", "lambda", "dynamodb"]
 
 [dependencies]
-aws-config = "1.8.10"
-aws-sdk-dynamodb = "1.98.0"
+aws-config = "1.8.11"
+aws-sdk-dynamodb = "1.100.0"
 aws-smithy-runtime-api = "1.9.2"
 env_logger = "0.11.8"
 futures = "0.3.31"
@@ -30,12 +28,12 @@ log = "0.4.28"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_dynamo = { version = "4.3.0", features = ["aws-sdk-dynamodb+1"] }
 thiserror = "2.0.17"
-tracing = "0.1.41"
-tracing-core = "0.1.34"
-tracing-subscriber = "0.3.20"
+tracing = "0.1.43"
+tracing-core = "0.1.35"
+tracing-subscriber = "0.3.22"
 xray-tracing = "0.0.1"
 
 [dev-dependencies]
-aws-smithy-types = "1.3.3"
+aws-smithy-types = "1.3.4"
 test-context = "0.5.4"
 tokio = { version = "1.48.0", features = ["macros"] }
