[skip ci] Fixed repository URL in package metadata.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ resolver = "3"
 version = "4.0.2"
 edition = "2024"
 license = "MIT"
-repository = "https://github.com/rafalwrzeszcz-wrzasqpl/wrzasqpl-commons"
+repository = "https://github.com/rafalwrzeszcz-wrzasqpl/pl.wrzasq.commons"
 homepage = "https://wrzasq.pl/"
 readme = "README.md"
 authors = [
