--- a/wrzasqpl-commons-aws-macros/Cargo.toml
+++ b/wrzasqpl-commons-aws-macros/Cargo.toml
@@ -22,6 +22,7 @@ syn = { version = "2", features = ["extra-traits", "full"] }
 [dev-dependencies]
 wrzasqpl-commons-aws = { path = "../wrzasqpl-commons-aws" }
 serde = { version = "1", features = ["derive"] }
-aws-config = "1.8.6"
 aws-sdk-dynamodb = "1.92.0"
 tokio = { version = "1.47.1", features = ["macros"] }
+aws-smithy-runtime = { version = "1.9.1", features = ["client", "connector-hyper-0-14-x"] }
+hyper = { version = "0.14.30", features = ["client", "tcp"] }
