--- a/wrzasqpl-commons-aws-macros/Cargo.toml
+++ b/wrzasqpl-commons-aws-macros/Cargo.toml
@@ -30,4 +30,4 @@ aws-config = "1.8.12"
 aws-sdk-dynamodb = "1.101.0"
 serde = { version = "1.0.228", features = ["derive"] }
 tokio = { version = "1.48.0", features = ["macros"] }
-wrzasqpl-commons-aws = { path = "../wrzasqpl-commons-aws" }
+wrzasqpl-commons-aws = { path = "../wrzasqpl-commons-aws", features = ["derive"] }
