--- a/wrzasqpl-commons-aws/Cargo.toml
+++ b/wrzasqpl-commons-aws/Cargo.toml
@@ -32,7 +32,7 @@ tracing = "0.1.43"
 tracing-core = "0.1.35"
 tracing-subscriber = "0.3.22"
 xray-tracing = "0.0.1"
-wrzasqpl-commons-aws-macros = { path = "../wrzasqpl-commons-aws-macros", optional = true }
+wrzasqpl-commons-aws-macros = { workspace = true, optional = true }
 
 [dev-dependencies]
 aws-smithy-types = "1.3.4"
