--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,7 +2,7 @@
 # This file is part of the pl.wrzasq.commons.
 #
 # @license http://mit-license.org/ The MIT license
-# @copyright 2023, 2025 © by Rafał Wrzeszcz - Wrzasq.pl.
+# @copyright 2023, 2026 © by Rafał Wrzeszcz - Wrzasq.pl.
 ##
 
 version: 2
@@ -18,6 +18,11 @@ updates:
                     - "aws-config"
                     - "aws-sdk-*"
                     - "aws-smithy-*"
+                    - "lambda_runtime"
+            tracing:
+                patterns:
+                    - "tracing"
+                    - "tracing_*"
     -
         package-ecosystem: "github-actions"
         directory: "/"
